# machinelearninglearning

./: README.md  chess_tf.py  dolly.py  flake.nix  main.py  main_tf.py  mnist_sigmoid_784_30_10_model.pickle  mnist_transformer.py  pyproject.toml  tf_mnist_50epochs_conv_pool_flatten_dense.h5  word2vec.py
Basic_Models/: mnist_sigmoid_784_100_10_crossentropy_model.pickle  mnist_sigmoid_784_30_10_crossentropy_model.pickle
Tensorflow_Models/: tf_mnist_50epochs_conv_pool_flatten_dense_adam.h5
logs/fit/20230423-112644/train/: events.out.tfevents.1682267204.nixos.119927.0.v2
logs/fit/20230423-112644/validation/: events.out.tfevents.1682267255.nixos.119927.1.v2
logs/mnist/20230425-182037/train/: events.out.tfevents.1682464837.nixos.197614.0.v2
logs/mnist/20230425-182037/validation/: events.out.tfevents.1682464889.nixos.197614.1.v2
logs/word2vec/20230423-170112/train/: events.out.tfevents.1682287272.nixos.159883.0.v2
logs/word2vec/20230423-174036/train/: events.out.tfevents.1682289636.nixos.162220.0.v2
logs/word2vec/20230423-174308/train/: events.out.tfevents.1682289788.nixos.163146.0.v2
logs/word2vec/20230423-182617/train/: events.out.tfevents.1682292377.nixos.169170.0.v2
logs/word2vec/20230423-183012/train/: events.out.tfevents.1682292612.nixos.170359.0.v2
tmp/mnist_transformer/checkpoint/: fingerprint.pb  keras_metadata.pb  saved_model.pb
tmp/mnist_transformer/checkpoint/variables/: variables.data-00000-of-00001  variables.index
