[tool.poetry]
name = "machine learning"
version = "0.1.0"
description = ""
authors = ["Collin Francel <collin.t.francel@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.12.0"
tensorrt = "^8.6.0"
#numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
